# UnB2016TG1

./: .gitignore  README.md
ColorDetectionExperiment/: CMakeLists.txt  Camera.cpp  Camera.h  ColorPointTracker.cpp  ColorPointTracker.h  CommandLineParser.cpp  Demo.cpp  DemoColorDetect.cpp  DemoColorDetect.h  HSVRangeTrackableObject.cpp  HSVRangeTrackableObject.h  OutputWindow.cpp  OutputWindow.h  PointTracker.cpp  PointTracker.h  main.cpp
CylindersWithPCL/: CMakeLists.txt  Demo.cpp  Demo.h  State.cpp  State.h  main.cpp  readme.md
FaceTracker/: CMakeLists.txt  main.cpp
Live3dAvatar/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ColorPointTracker.cpp  ColorPointTracker.h  CommandLineParser.cpp  CommandLineParser.h  Demo.cpp  Demo.h  HSVRangeTrackableObject.h  Logger.cpp  PointTracker.h  State.cpp  State.h  main.cpp
Live3dAvatar/cmake/: EigenConfigureTesting.cmake  EigenDetermineOSVersion.cmake  EigenDetermineVSServicePack.cmake  EigenTesting.cmake  FindAdolc.cmake  FindStandardMathLibrary.cmake  FindSuperLU.cmake  language_support.cmake
Live3dAvatar/data/: config.yml
Live3dAvatar/marker_detection/: .gitignore  CMakeLists.txt  Camera.cpp  Markers.cpp  Markers.h  config.yml  main.cpp
Live3dAvatar/src/: CMakeLists.txt  Camera.cpp  Camera.h  ColorPointTracker.cpp  ColorPointTracker.h  Demo.cpp  Demo.h  Logger.cpp  MOTemplateTracker.cpp  MOTemplateTracker.h  MVMOTemplateTracker.cpp  MVMOTemplateTracker.h  MVMOTracker.cpp  MVMOTracker.h  Markers.cpp  Markers.h  MultipleViewMerger.cpp  MultipleViewMerger.h  MultipleViewPointTracker.cpp  MultipleViewPointTracker.h  OutputWindow.cpp  OutputWindow.h  RangeMultipleViewTracker.cpp  RangeMultipleViewTracker.h  State.cpp  State.h  TrackableObjInfo.cpp  TrackableObjInfo.h  main.cpp  util.cpp  util.h
Live3dAvatar/test/: CMakeLists.txt  TrackableObjInfo.cpp  TrackableObjInfo.h  color_transform.cpp  create_easy_video.cpp  test_camera.cpp  test_hsv_tracker.cpp  test_read_yml.cpp  test_write_yml.cpp
Live3dAvatar/util/: CMakeLists.txt  createEasyTemplateVideo.cpp  generateTrackableTemplate.cpp
Live3dAvatar/yml/: sample.yml  simple_config.yml  template_mode_config.yml
TG1_marker_detection (2)/: CMakeLists.txt
marker_detection/: CMakeLists.txt  Camera.cpp  Camera.h  Markers.cpp  Markers.h  config.yml  main.cpp
py/: cropVideo.py
